      named capturing group.

 - QPointer
    * It is now possible to create a QPointer with a const templated type.

 - QTimeZone
    * New class to support fixed time zones using the Olsen ID's and the host
      system time zone data.

 - QDateTime
    * Fully implement support for Qt::TimeSpec of Qt::OffsetFromUTC
    * Support for a new time spec of Qt::TimeZone using QTimeZone
    * Added new methods for offsetFromUTC(), setOffsetFromUTC(),
      toOffsetFromUTC(), abbreviation(), timeZone(), setTimeZone(),
      toTimeZone() and isDaylightTime().
    * Added convenience methods for fromMSecsSinceEpoch() and fromTime_t()
      to take time spec or time zone to be used in returned datetime.
    * The debug datastream is now an ISO format instead of Qt::TextDate

QtGui
-----

 - QOffscreenSurface
    * New class for rendering graphics using OpenGL in an arbitrary thread
      without needing to use a hidden QWindow.


QtNetwork
---------

 -

QtWidgets
---------

- QGraphicsView:
  * Added function rubberBandRect() and signal rubberBandChanged.

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------
 -

Qt for Windows
--------------
 -

Qt for Mac OS X
---------------
 -

Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************

